--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".Activities.IntroActivity">
+    tools:context=".ui.activities.IntroActivity">
 
     <ScrollView
         android:layout_width="match_parent"
