--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="black2">#212121</color>
@@ -7,4 +7,6 @@
     <color name="black4">#464444</color>
     <color name="yellow">#F3C024</color>
     <color name="grey">#807b7b</color>
+    <color name="nav_item_color" android:state_checked="true">@color/white</color>
+
 </resources>
